<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="434dp"
            android:layout_height="220dp"
            app:srcCompat="@drawable/portada_musica"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.431"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="176dp"
            android:layout_height="61dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/title"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="126dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="8dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.524">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                app:srcCompat="@drawable/coraz_n_serrano" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="162dp"
                android:layout_marginStart="5dp"
                android:text="@string/album2"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:layout_marginStart="5dp"
                android:textSize="12dp"
                android:text="@string/songs2"/>

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:layout_marginStart="125dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.524">

            <ImageButton
                android:id="@+id/btn1"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                app:srcCompat="@drawable/dy" />

            <TextView
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="162dp"
                android:text="@string/album1" />

            <TextView
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="180dp"
                android:text="@string/songs1"
                android:textSize="12dp" />

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:layout_marginTop="160dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="475dp"
            app:layout_constraintHorizontal_bias="0.963"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="162dp"
                android:text="@string/album4" />
            <TextView
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="180dp"
                android:text="@string/songs4"
                android:textSize="12dp" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:srcCompat="@drawable/grupo5" />
            <ImageButton
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:layout_marginTop="160dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="475dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="162dp"
                android:text="@string/album3" />

            <TextView
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="180dp"
                android:text="@string/songs3"
                android:textSize="12dp" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                app:srcCompat="@drawable/jauz" />

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:layout_marginTop="160dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />
        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>
</ScrollView>