<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.CardView
        android:id="@+id/imageViewFooter"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/middle" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:textSize="18dp"
            android:text="@string/artist" />
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="300dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_action_playback_pause" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="0dp"
            android:text="@string/music1"
            android:textSize="25dp" />
    </android.support.v7.widget.CardView>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="220dp"
            app:srcCompat="@drawable/portada"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.416"
            android:layout_marginEnd="8dp"
            android:id="@+id/imageView" />

        <android.support.v7.widget.CardView
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/cardView8"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView11"
            app:layout_constraintVertical_bias="0.0">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/talk" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:textSize="18dp"
                android:text="@string/artist" />
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="0dp"
                android:text="@string/music6"
                android:textSize="25dp" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView8"
            app:layout_constraintVertical_bias="0.0"
            android:id="@+id/cardView13">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/turn_down_for_what" />
            <TextView
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="0dp"
                android:textSize="25dp"
                android:text="@string/music7" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/artist"
                android:textSize="18dp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginBottom="9dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/cardView11"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView6"
            app:layout_constraintVertical_bias="0.0">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/sober" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="0dp"
                android:text="@string/music5"
                android:textSize="25dp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/artist"
                android:textSize="18dp" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/cardView6"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView10"
            app:layout_constraintVertical_bias="0.0">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/propaganda" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="0dp"
                android:text="@string/music4"
                android:textSize="25dp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/artist"
                android:textSize="18dp" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cardView10"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView9"
            app:layout_constraintVertical_bias="0.0">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/let_me_love_you" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/artist"
                android:textSize="18dp" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="0dp"
                android:text="@string/music3"
                android:textSize="25dp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView9"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-141dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView12">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/get_low" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="0dp"
                android:text="@string/music2"
                android:textSize="25dp" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/artist"
                android:textSize="18dp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            android:layout_marginTop="-41dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView13"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/you_know_you_like_it" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="0dp"
                android:text="@string/music8"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/artist"
                android:textSize="18dp" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView12"
            android:layout_width="360dp"
            android:layout_height="120dp"
            android:layout_marginBottom="521dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageButton
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@drawable/middle" />

            <TextView
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="18dp"
                android:text="@string/music1"
                android:textSize="35dp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="60dp"
                android:text="@string/artist"
                android:textSize="20dp" />

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
</RelativeLayout>